# argumentation-mining-models

./: .flake8  .gitignore  CITATION.cff  NOTICE  README.md  annotate.py  dev-requirements.txt  environment.yml  eval_rel_class.sh  eval_seq_tag.sh  eval_sta_class.sh  pyproject.toml  requirements.txt  run_acta.py  run_acta.sh  run_acta_annotation.py  run_acta_multiple_devices.sh  run_acta_single_device.sh  run_train.sh  train.py  train_multiple_devices.sh  train_multiplechoice.py  train_rel_class.sh  train_seq_tag.sh  train_single_device.sh  train_sta_class.sh  train_sta_rel_class.sh  train_transformer.py  upload_model.sh
acta/: pipeline.py  utils.py
acta/data/: __init__.py  base.py  relation_classification.py  sequence_tagging.py
acta/models/: __init__.py  base.py  relation_classificaiton.py  relation_classification.py  sequence_tagging.py
am_transformer/: utils.py
am_transformer/models/: base.py  relation_classification.py  sequence_tagging.py
amtm/: __init__.py  pipeline.py  utils.py
amtm/data/: __init__.py  base.py  relation_classification.py  sequence_tagging.py  statement_classification.py
amtm/models/: __init__.py  base.py  relation_classification.py  sequence_tagging.py  statement_classification.py
archive/: LICENSE  run_evaluate.sh  run_train.sh
archive/preprocessing/: create_tsv_from_brat.py
archive/utils/: models.py  tokenizer.py
data/bcause+touche/relation_classification/: BcauseTouche-test.tsv  BcauseTouche-train.tsv  BcauseTouche-validation.tsv
data/bcause+touche/statement_classification/: Bcause-Touche-PE-test.tsv  Bcause-Touche-PE-train.tsv  Bcause-Touche-PE-validation.tsv
data/bcause/relation_classification/: bcause-test.tsv  bcause-train.tsv  bcause-validation.tsv
data/bcause/statement_classification/: bcause-test.tsv  bcause-train.tsv  bcause-validation.tsv
data/classification/: touche-test.tsv  touche-validation.tsv
data/glaucoma_test/: test.conll
data/mixed_test/: test.conll
data/neoplasm/: dev.conll  test.conll  train.conll
data/relation/: touche-test.tsv  touche-train.tsv  touche-validation.tsv
data/touche/statement_classification/: touche-train.tsv
notebooks/: pico_data_process.ipynb  transformers_lightning.ipynb  transformers_lightning_dataset.ipynb
preprocessing/: casimedicos_data_process.ipynb
scripts/: eval.py  train.py  update_artifacts_uri.py  upload_model.py
utils/: metrics.py  models.py
