[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "argumentation-mining-transformers"
version = "1.0.1"
authors = [
    { name="Cristian Cardellino", email="cristian.a.cardellino@inria.fr" },
]
description = "Implementation of 'Transformed-based Argument Mining'"
readme = "README.md"
requires-python = ">=3.10.8"
dynamic = ["dependencies", "optional-dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache v2.0 License"
]

[project.urls]
Homepage = "https://github.com/crscardellino/argumentation-mining-transformers"
Issues = "https://github.com/crscardellino/argumentation-mining-transformers/issues"

[tool.black]
extend-exclude = '\w*.ipynb'
line-length = 100

[tool.setuptools.packages.find]
include = ["amtm*"]
exclude = ["*venv*", "*env*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = { file = ["dev-requirements.txt"] }
